--- a/index.html
+++ b/index.html
@@ -6,7 +6,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-</body>
+    <body>
+
+            <!-- header section -->
+             <header>
+                <a href="">
+                    <img src="./images/header/Logo.svg" alt="Web studio logo" width="156" height="24">
+                </a>
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="">Studio</a>
+                                </li>
+
+                                <li>
+                                    <a href="">Portfolio</a>
+                                </li>
+
+                                <li>
+                                    <a href="">Contacts</a>
+                                </li>
+                            </ul>
+                        </nav> 
+                                <a href="mailto:info@devstudio.com">info@devstudio.com</a>                                           
+                                <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+             </header>
+        <main>
+
+            <!-- hero image section -->
+            <section>
+                <h1>Effective Solutions for Your Business</h1>
+                <button type="button">Order Service</button>
+            </section>
+
+            <!-- section 1-->
+            <section>
+                <p>Strategy</p>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+
+                <p>Punctuality</p>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+
+                <p>Diligence</p>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+
+                <p>Technologies</p>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </section>
+
+            <!-- section 2-->
+            <section>
+                    <h2>What are we doing</h2>
+
+                    <ul>
+                        <li>
+                            <img 
+                            src="./images/section 2/img 1.jpg" 
+                            alt="відобрадення прикладу сайту на комп'ютері" 
+                            width: 360px; 
+                            height: 300px;
+                            >            
+                        </li>
+        
+                        <li>
+                            <img 
+                            src="./images/section 2/img 2.jpg" 
+                            alt="відобрадення прикладу сайту на телефоні" 
+                            width: 360px;
+                            height: 300px;
+                            >
+                        </li>
+
+                        <li>
+                            <img 
+                            src="./images/section 2/img 3.jpg" 
+                            alt=" одночасне відобрадення прикладу сайту на комп'ютері та телефоні"
+                            width: 360px;
+                            height: 300px;
+                            >
+                        </li>
+                    </ul>                    
+                    </section>
+
+            <!-- section 3-->
+            <section>
+                <h3>Our Team</h3>
+
+<!-- section foto 1-->
+                <ul>
+                    <li>
+                        <img src="./images/section 3/img.jpg" alt="Портрет дизайнера продукту" 
+                        width: 264px;
+                        height: 260px;
+                        >
+                        <p>Mark Guerrero</p>
+                        <p>Product Designer</p>
+                    </li>
+                </ul>
+
+
+<!-- section foto 2-->
+                <ul>
+                    <li>
+                        <img src="./images/section 3/img (1).jpg" alt="Портрет розробника інтерфейсу" 
+                        width: 264px;
+                        height: 260px;
+                        >
+                        <p>Tom Ford</p>
+                        <p>Frontend Developer</p>
+                    </li>
+                </ul>
+
+
+<!-- section foto 3-->
+                <ul>
+                    <li>
+                        <img src="./images/section 3/img (2).jpg" alt="Портрет маркетолога" 
+                        width: 264px;
+                        height: 260px;
+                        >
+                        <p>Camila Garcia</p>
+                        <p>Marketing</p>
+                    </li>
+                </ul>
+
+
+<!-- section foto 4-->
+                <ul>
+                    <li>
+                        <img src="./images/section 3/img (3).jpg" alt="Портрет дизайнера інтерфейсу користувача" 
+                        width: 264px;
+                        height: 260px;
+                        >
+                        <p>Daniel Wilson</p>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+           </section>
+
+
+
+        </main>
+
+        <!-- footer section -->
+        <footer>
+            <img src="./images/header/Logo.svg" alt="Web studio logo" 
+            width="115" 
+            height="24"
+            >
+                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+
+                </p>
+        </footer>
+
+    </body>
 </html>
